--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,16 +1,26 @@
 server {
   port = 2101
 }
+
 firebase {
   auth {
     config-path = ${?FIREBASE_CONFIG_PATH}
   }
 }
-slick.dbs.default {
-  profile = "slick.jdbc.PostgresProfile$"
-  driver = "org.postgresql.Driver"
+
+database {
   url = "jdbc:postgresql://localhost:5432/homepro"
+  url = ${?HOME_PRO_DB_URL}
   user = ${?HOME_PRO_DB_USER}
   password = ${?HOME_PRO_DB_PASSWORD}
-  connectionPool = "HikariCP"
+  maxPoolSize = 10
+  maxPoolSize = ${?HOME_PRO_DB_MAX_POOL_SIZE}
+  minIdle = 5
+  minIdle = ${?HOME_PRO_DB_MIN_IDLE}
+  connectionTimeout = 30000
+  connectionTimeout = ${?HOME_PRO_DB_CONNECTION_TIMEOUT}
+  idleTimeout = 600000
+  idleTimeout = ${?HOME_PRO_DB_IDLE_TIMEOUT}
+  maxLifetime = 1800000
+  maxLifetime = ${?HOME_PRO_DB_MAX_LIFETIME}
 }
