S3 integration working fine

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,11 @@
+aws {
+  s3 {
+    bucket = "homepro-photos-east-1"
+  }
+  region = "us-east-1"
+}
 server {
-  port = 2101
+  port = 2107
 }
 
 firebase {
