Logging working fine

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,13 @@
 aws {
   s3 {
     bucket = "homepro-photos-east-1"
+    presigned-url-expiration-hours = 24
+    presigned-url-expiration-hours = ${?AWS_S3_PRESIGNED_URL_EXPIRATION_HOURS}
   }
   region = "us-east-1"
+  # Optional: Force credential provider chain order (uncomment if needed)
+  # access-key-id = ${?AWS_ACCESS_KEY_ID}
+  # secret-access-key = ${?AWS_SECRET_ACCESS_KEY}
 }
 server {
   port = 2107
